ci: build + docs + publish

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
+    "docs:build": "typedoc --out docs src/index.ts",
     "watch": "webpack --watch"
   },
   "dependencies": {
