--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-      - run: cd doc-theme && yarn install && yarn build && rm -rf node_modules && cd ..
+      # - run: cd doc-theme && yarn install && yarn build && rm -rf node_modules && cd ..
       - run: yarn install --frozen-lockfile
       - run: yarn docs:build
       - uses: peaceiris/actions-gh-pages@v3
