--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "formplex-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Incredibly easy & flexible React form hooks",
+  "keywords": [
+    "react",
+    "hook",
+    "form",
+    "formplex",
+    "formplex-react",
+    "react-hook",
+    "react-hook-form",
+    "react-form-hook"
+  ],
   "main": "index.js",
   "repository": "https://github.com/chenasraf/formplex-react",
   "author": "Chen Asraf <contact@casraf.dev>",
@@ -12,9 +22,6 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "docs:build": "typedoc --out docs src/index.ts",
     "watch": "webpack --watch"
-  },
-  "dependencies": {
-    "react": ">16"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
